# cmake_template

./: CMakeLists.txt
src/: CMakeLists.txt  Config.h.in  main.cpp
